--- a/adil_alkozha.tex
+++ b/adil_alkozha.tex
@@ -16,8 +16,7 @@
 \familyname{Alkozha}
 \address{}{Almaty, Kazakhstan}
 \mobile{+7 700 0701471}
-\email{1101.debian@gmail.com}
-\homepage{https://lowlevelbits.org}
+\email{adil040900@gmail.com}
 \social[github]{adialkozha}
 \social[telegram]{adilalkozha}
 \extrainfo{First, solve the problem. Then, write the code.}
