--- a/adil_alkozha.tex
+++ b/adil_alkozha.tex
@@ -18,7 +18,7 @@
 \mobile{+7 700 0701471}
 \email{adil040900@gmail.com}
 \social[github]{adialkozha}
-\social[telegram]{adilalkozha}
+\social[telegram]{adil_alkozha}
 \extrainfo{First, solve the problem. Then, write the code.}
 
 \makeatletter
