--- a/adil_alkozha.tex
+++ b/adil_alkozha.tex
@@ -64,6 +64,6 @@
   \cventry
     {Nov 2019 - Aug 2020}
     {Software Development}
-    {Computer Academy "Step", Donetsk, Ukraine}
+    {Computer Academy "Step", Almaty}
     {}{\newline\url{https://almaty.itstep.org/}}{}
 \end{document}
