--- a/adil_alkozha.tex
+++ b/adil_alkozha.tex
@@ -42,6 +42,15 @@
   {Home Credit Bank, Almaty, Kazakhstan}
   {\newline{}\url{https://homecredit.kz/}}{}
   {Backend: I participate in the development of a project with a microserver architecture on the Molecular  Service,  development of services for the server side of the project, api to them, connection to the    database.\newline Frontend:I participate in the development of interfaces in vue using the vue ecosystem}
+\cventry
+  {March 2022 - now}
+  {Out-staff and out-source software developer}
+  {Techwings, remote,Poland}
+  {\newline{}\url{https://techwings.com/}}{}
+  {Backend:.I am working with NodeJS and PostgreSQL. Importing large amounts of data from different file formats into a database. Creating new data generations based on the data in the database..\newline Frontend:Worked with React and fixed bugs on the front-end part of the project.
+  \newline Worked in a different team and different projects.
+  Also worked alone on the backend part of the project.}
+  
 \section{Technical Skills}
 \cvline
   {Languages}{JavaScript, C\#}
@@ -64,6 +73,6 @@
   \cventry
     {Nov 2019 - Aug 2020}
     {Software Development}
-    {Computer Academy "Step", Almaty}
+    {Computer Academy "Step", Donetsk, Ukraine}
     {}{\newline\url{https://almaty.itstep.org/}}{}
 \end{document}
